--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,33 @@
 body {
   font-family: sans-serif;
-  background: #e9f0f9;
+  background: #fff;
   color: #333; }
+
+a {
+  color: #0d0950 !important; }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  padding: 20px; }
+  .footer i {
+    color: #0d0950 !important;
+    transform: rotate(30deg); }
+
+.modal-content {
+  background: #0d0950 !important;
+  color: #fff  !important; }
+
+.modal-footer {
+  background: #070435 !important; }
+
+.logoAling {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  position: absolute;
+  width: 100%; }
 
 .containerModal {
   position: absolute;
@@ -12,7 +38,7 @@ body {
 .loaderMin {
   border: 8px solid #dce1eb;
   /* Light grey */
-  border-top: 8px solid #3498db;
+  border-top: 8px solid #0d0950;
   /* Blue */
   border-radius: 50%;
   width: 50px;
@@ -33,28 +59,39 @@ body {
   justify-content: space-evenly !important; }
 
 .btnConfirmar {
-  background: #83e80e !important;
-  font-weight: 900 !important;
-  border-radius: 8px !important; }
+  background: #83e80e;
+  font-weight: 900;
+  border-radius: 8px; }
+  .btnConfirmar :hover {
+    background: #589c08;
+    font-weight: 900;
+    border-radius: 8px; }
 
 .btnCorrigir {
-  background: #FFC107 !important;
-  font-weight: 900 !important;
-  border-radius: 8px !important; }
+  background: #ffc107;
+  font-weight: 900;
+  border-radius: 8px; }
+  .btnCorrigir :hover {
+    background: #8e6c08;
+    font-weight: 900;
+    border-radius: 8px; }
 
 .btnBranco {
-  font-weight: 900  !important;
-  border-radius: 8px  !important; }
+  background: #fff;
+  font-weight: 900;
+  border-radius: 8px; }
+  .btnBranco :hover {
+    background: #e6e4e4;
+    font-weight: 900;
+    border-radius: 8px; }
 
 .loader {
   margin-top: 22%;
-  border: 16px solid #dce1eb;
-  /* Light grey */
-  border-top: 16px solid #3498db;
-  /* Blue */
+  border: 8px solid #dce1eb;
+  border-top: 8px solid #0d0950;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   animation: spin 2s linear infinite; }
 
 @keyframes spin {
@@ -77,8 +114,11 @@ body {
 
 .boxCandidato {
   background: #fff;
-  padding: 20px;
   border-radius: 9px; }
+  .boxCandidato :hover {
+    background: #0d0950;
+    color: #fff;
+    border-radius: 9px; }
 
 .boxHead {
   padding: 11px;
@@ -86,10 +126,12 @@ body {
   font-weight: 600;
   background: #fff; }
 
-.foto img {
-  width: 75px;
-  height: 75px;
-  border-radius: 50%; }
+.foto {
+  margin-top: -31px; }
+  .foto img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%; }
 
 .nome {
   font-size: 14px;
@@ -102,17 +144,19 @@ body {
 
 @media (min-width: 1px) and (max-width: 329px) {
   .boxCandidato {
-    padding: 8px;
     float: left;
     width: 28%;
     margin-left: 10%;
     margin-top: 6%;
     background: #fff;
-    padding: 20px;
     border-radius: 9px; }
     .boxCandidato a {
       text-decoration: none;
       color: #333; }
+    .boxCandidato :hover {
+      border-radius: 9px;
+      background: #0d0950;
+      color: #fff; }
 
   .boxVotos {
     position: absolute;
@@ -124,17 +168,19 @@ body {
     font-weight: 600; } }
 @media (max-width: 479px) and (min-width: 330px) {
   .boxCandidato {
-    padding: 8px;
     float: left;
     width: 25%;
     margin-left: 14%;
     margin-top: 6%;
     background: #fff;
-    padding: 20px;
     border-radius: 9px; }
     .boxCandidato a {
       text-decoration: none;
       color: #333; }
+    .boxCandidato :hover {
+      border-radius: 9px;
+      background: #0d0950;
+      color: #fff; }
 
   .boxVotos {
     position: absolute;
@@ -146,17 +192,19 @@ body {
     font-weight: 600; } }
 @media (min-width: 480px) and (max-width: 692px) {
   .boxCandidato {
-    padding: 8px;
     float: left;
     width: 31%;
     margin-left: 10%;
     margin-top: 6%;
     background: #fff;
-    padding: 20px;
     border-radius: 9px; }
     .boxCandidato a {
       text-decoration: none;
       color: #333; }
+    .boxCandidato :hover {
+      border-radius: 9px;
+      background: #0d0950;
+      color: #fff; }
 
   .boxVotos {
     position: absolute;
@@ -168,17 +216,19 @@ body {
     font-weight: 600; } }
 @media (min-width: 693px) and (max-width: 986px) {
   .boxCandidato {
-    padding: 8px;
     float: left;
     width: 14%;
     margin-left: 12%;
     margin-top: 6%;
     background: #fff;
-    padding: 20px;
     border-radius: 9px; }
     .boxCandidato a {
       text-decoration: none;
       color: #333; }
+    .boxCandidato :hover {
+      border-radius: 9px;
+      background: #0d0950;
+      color: #fff; }
 
   .boxVotos {
     position: absolute;
@@ -190,17 +240,19 @@ body {
     font-weight: 600; } }
 @media (min-width: 987px) {
   .boxCandidato {
-    padding: 8px;
     float: left;
     width: 18%;
     margin-left: 10%;
     margin-top: 6%;
     background: #fff;
-    padding: 20px;
     border-radius: 9px; }
     .boxCandidato a {
       text-decoration: none;
       color: #333; }
+    .boxCandidato :hover {
+      border-radius: 9px;
+      background: #0d0950;
+      color: #fff; }
 
   .boxVotos {
     position: absolute;
