--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,43 @@
+$color: #0d0950;
+
 body {
   font-family: sans-serif;
-  background: rgb(233, 240, 249);
+  background: #fff;
   color: #333;
+}
+
+a {
+  color: $color !important;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  padding: 20px;
+
+  i {
+    color: $color !important;
+    transform: rotate(30deg);
+  }
+}
+
+
+.modal-content{
+  background: #0d0950 !important;
+  color: #fff  !important;
+}
+.modal-footer{
+  background: #070435 !important;
+}
+
+
+.logoAling {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  position: absolute;
+  width: 100%;
 }
 
 .containerModal {
@@ -15,52 +51,72 @@ body {
 
 .loaderMin {
   border: 8px solid #dce1eb; /* Light grey */
-  border-top: 8px solid #3498db; /* Blue */
+  border-top: 8px solid $color; /* Blue */
   border-radius: 50%;
   width: 50px;
   height: 50px;
   animation: spin 2s linear infinite;
 }
 
-.displayFlex{
+.displayFlex {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   font-size: 27px;
   height: 100%;
 
-  i{
+  i {
     font-size: 78px !important;
   }
 }
 
-.modal-footer{
-    display: flex;
-    justify-content: space-evenly !important;
+.modal-footer {
+  display: flex;
+  justify-content: space-evenly !important;
 }
-.btnConfirmar{
-    background: #83e80e !important;
-    font-weight: 900 !important;
-    border-radius: 8px !important;
+.btnConfirmar {
+  background: #83e80e;
+  font-weight: 900;
+  border-radius: 8px;
+
+
+  :hover{
+    background: #589c08;
+    font-weight: 900;
+    border-radius: 8px;
+  }
 }
 
-.btnCorrigir{
-    background: #FFC107 !important;
-    font-weight: 900 !important;
-    border-radius: 8px !important;
+.btnCorrigir {
+  background: #ffc107;
+  font-weight: 900;
+  border-radius: 8px;
+
+  :hover{
+    background: #8e6c08;
+    font-weight: 900;
+    border-radius: 8px;
+  }
 }
 
-.btnBranco{
-    font-weight: 900  !important;
-    border-radius: 8px  !important;
+.btnBranco {
+  background: #fff;
+  font-weight: 900;
+  border-radius: 8px;
+
+  :hover{
+    background: #e6e4e4;
+    font-weight: 900;
+    border-radius: 8px;
+  }
 }
 .loader {
   margin-top: 22%;
-  border: 16px solid #dce1eb; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 8px solid #dce1eb;
+  border-top: 8px solid $color;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   animation: spin 2s linear infinite;
 }
 
@@ -89,11 +145,14 @@ body {
 
 .boxCandidato {
   background: #fff;
-  padding: 20px;
+  // padding: 20px;
   border-radius: 9px;
-}
 
-.headBox {
+  :hover {
+    background: $color;
+    color: #fff;
+    border-radius: 9px;
+  }
 }
 
 .boxHead {
@@ -104,6 +163,7 @@ body {
 }
 
 .foto {
+  margin-top: -31px;
   img {
     width: 75px;
     height: 75px;
@@ -122,19 +182,24 @@ body {
 }
 
 @mixin boxCandidato($width: 19%, $marginLeft: 10%) {
-  padding: 8px;
+  // padding: 8px;
   float: left;
   width: $width;
   margin-left: $marginLeft;
   margin-top: 6%;
 
   background: #fff;
-  padding: 20px;
   border-radius: 9px;
 
   a {
     text-decoration: none;
     color: #333;
+  }
+
+  :hover {
+    border-radius: 9px;
+    background: $color;
+    color: #fff;
   }
 }
 
