--- a/sass/style.scss
+++ b/sass/style.scss
@@ -110,8 +110,7 @@ a {
   display: flex;
   justify-content: space-evenly !important;
 }
-
-
+.btnConfirmarNegative,
 .btnConfirmar {
   font-size: 12px !important;
   background: #83e80e;
